# secfetch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
secfetch/: pyproject.toml
src/secfetch/: cli.py
src/secfetch/checks/filesystem/: permissions.py
src/secfetch/checks/kernel/: aslr.py  hardening.py  lockdown.py  lsm.py
src/secfetch/checks/network/: firewall.py  ipv6.py  ports.py  rp_filter.py  services.py  tcp_syncookies.py
src/secfetch/checks/system/: secureboot.py
src/secfetch/core/: config.py  engine.py  error_handling.py  logger.py  scoring.py
src/secfetch/data/: port_db.py
src/secfetch/ui/: help.py  improve.py  output.py
tests/: test_checks.py  test_improve.py  test_logger.py  test_network_checks.py  test_output.py
